[workspace]
resolver = "2"
members = [ 
    "bin-github",
    "bin-parse",

    "clients/rust",
]

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
serde_yaml = { version = "0.9.34+deprecated" }
tokio = "1.43.0"

[workspace.lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "warn"
