[workspace]
resolver = "2"
members = [ 
    "bin-github",
    "bin-parse",

    "clients/rust",
]

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34-deprecated" }
tokio = "1.45.1"
urlencoding = "2.1.3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
