[package]
name = "arma3-wiki-parse"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2021"

[lints]
workspace = true

[dependencies]
arma3-wiki = { path = "../clients/rust", features = ["wiki"]}
arma3-wiki-github = { path = "../bin-github" }

httpdate = { version = "1.0.3" }
indicatif = { version = "0.17.8" }
regex = { version = "1.10.4" }
reqwest = { version = "0.12.2" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true , features = ["full"] }
urlencoding = { version = "2.1.3" }
