[package]
name = "arma3-wiki-parse"
version = "0.1.0"
authors = ["Brett Mayson"]
edition = "2021"

[lints]
workspace = true

[dependencies]
arma3-wiki = { path = "../clients/rust", features = ["wiki"]}
arma3-wiki-github = { path = "../bin-github" }

httpdate = { version = "1.0.3" }
indicatif = { version = "0.17.11" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12.15" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true , features = ["full"] }
urlencoding = { workspace = true }
