[package]
name = "arma3-wiki"
description = "A project to store data about Arma 3 commands in a useable format"
license = "MIT"
version = "0.1.16"
edition = "2021"

[lints]
workspace = true

[dependencies]
directories = "5.0.1"
regex = "1.10.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = { workspace = true }

# Local
rust-embed = {version = "8.4.0", features = ["interpolate-folder-path"] }

# Remote
git2 = { version = "0.18.3", optional = true }

[features]
default = ["remote"]
remote = ["git2"]
wiki = []

[build-dependencies]
directories = "5.0.1"
fs_extra = { version = "1.3.0" }
git2 = { version = "0.18.3" }
rand = "0.8.5"
