[package]
name = "arma3-wiki"
description = "A project to store data about Arma 3 commands in a useable format"
license = "MIT"
version = "0.4.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
directories = "6.0.0"
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

# Local
rust-embed = { version = "8.4.0", features = ["interpolate-folder-path"] }

# Remote
git2 = { version = "0.20.2", optional = true }

[features]
default = ["remote"]
remote = ["git2"]
wiki = []

[build-dependencies]
directories = "6.0.0"
fs_extra = { version = "1.3.0" }
git2 = { version = "0.20.2" }
rand = "0.8.5"
